# knoggin

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  clean.sh  config.py  docker-compose.yml  package-lock.json  pyproject.toml
agent/: community_tools.py  context.py  formatters.py  internals.py  loop.py  orchestrator.py  streaming.py  system_prompt.py  system_prompt_v0.py  tools.py
api/: community_manager.py  main.py  mcp_server.py  onboarding.py  state.py
api/commands/: parser.py  registry.py
api/commands/handlers/: merge.py  pref.py
api/routes/: agents.py  chat.py  commands.py  community.py  config.py  debug.py  files.py  health.py  mcp.py  models.py  profiles.py  proposals.py  sessions.py  stats.py  topics.py
benchmark/: custom_benchmark_results.json
benchmark/data/: custom_benchmark_msgs.json  custom_benchmark_questions.json  custom_benchmark_results.json  custom_benchmark_results_v1.json
benchmark/test/: answer.py  eval_result_abs_0.json  eval_result_abs_1.json  eval_result_know_0.json  eval_result_know_1.json  eval_result_know_4.json  eval_result_multi_0.json  eval_result_multi_1.json  eval_result_multi_2.json  eval_result_multi_3.json  eval_result_multi_4.json  eval_result_single_0.json  eval_result_tempo_3.json  eval_result_tempo_4.json  eval_result_tempo_5.json  messages.py  output.json  quick_run.py  run_custom_eval.py  run_eval.py
cli/: config.py  main.py
cli/templates/: docker-compose.knoggin.yml  knoggin.default.toml
db/: community_store.py  memgraph.py  query_tools.py  reader.py  store.py  writer.py
docs/: SECURITY.md
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/api/: agents.js  chat.js  commands.js  community.js  config-base.js  config.js  debug.js  fetch.js  files.js  onboarding.js  profiles.js  proposals.js  sessions.js  stats.js  topics.js
frontend/src/components/: ConfigGate.jsx  ErrorBoundary.jsx  HierarchyEditor.jsx  TopicEditor.jsx
frontend/src/context/: SessionContext.jsx  SocketContext.jsx  ToolsContext.jsx
frontend/src/data/: greetings.json
frontend/src/hooks/: useChat.js  useCommunityStream.js  useDelayedLoading.js  useDrawers.js
frontend/src/pages/: AgentsPage.jsx  ChatPage.jsx  CommunityPage.jsx  DashboardPage.jsx  DebugPage.jsx  DeveloperSettingsPage.jsx  MemoryPage.jsx  OnboardingPage.jsx  SettingsPage.jsx
jobs/: aac_job.py  archive.py  base.py  cleaner.py  dlq.py  factory.py  jobs_utils.py  merger.py  mood.py  profile.py  scheduler.py  topics.py  utils.py
knoggin-sdk/: README.md  pyproject.toml
knoggin-sdk/src/knoggin/: __init__.py  agent_sdk.py  async_client.py  decorators.py  events.py  extraction.py  managers.py  session.py  sync_client.py  topics_sdk.py  types.py
knoggin-server/: README.md  pyproject.toml
knoggin-server/src/agent/: community_tools.py  executor.py  formatters.py  internals.py  orchestrator.py  (+3 more)
log/: logging_setup.py
main/: consumer.py  context.py  embedding.py  entity_resolve.py  nlp_pipe.py  processor.py  prompts.py  redisclient.py  service.py  setup.py  topics_config.py  utils.py
routes/: chat.py  models.py  setup.py
schema/: dtypes.py  tool_schema.py
scripts/: clean.sh  run_benchmark.sh  setup.sh
sdk/: __init__.py  agent_sdk.py  client.py  config.py  events.py  extraction.py  session.py  topics_sdk.py  types.py
shared/: config.py  embedding.py  events.py  file_rag.py  mcp_bridge.py  mcp_client.py  redisclient.py  resource.py  service.py  setup_questions.py  topic_gen.py  topics_config.py
shared/infra/: redis.py  resources.py
shared/mcp/: client.py
shared/models/: memory.py
shared/rag/: embedding.py  processor.py
shared/schema/: community_tool_schema.py  dtypes.py  settings.py  tool_schema.py
shared/services/: graph.py  llm.py  memory.py  topics.py
shared/utils/: events.py
static/: app.js
tests/: test_consumer.py  test_db.py  test_dtypes.py  test_er.py  test_er_scoring.py  test_nlp.py  test_nlp_live.py  test_processor.py  test_topics.py  test_utils.py  test_vp_02.py
tests/agent/: test_aac_tools.py  test_formatters.py  test_internals.py  test_prompts_and schema.py  test_tools.py
tests/jobs/: test_cleaner_archive_jobs.py  test_dlq_job.py  test_job_utils.py  test_jobs_base_scheduler.py  test_llm_based_jobs.py
tests/live_testing/: test_llm_based_jobs_live.py  test_vp_02_live.py
(+261 files in other folders)
