[project]
name = "knoggin"
version = "0.1.0"
description = "Lightweight SDK for Knoggin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0"
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["knoggin*"]
